changed the font Far Beyond Solutions to be the same with the font that is in the logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Far Beyond Solutions</title>
-    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round|Josefin+Sans' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/flexslider.css" rel="stylesheet" >
@@ -49,7 +49,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
                   <img id="FBSLogo" src="img/FBSLogo.png" alt="Logo of Far Beyond Solutions"/>
-                  <h1 class="animated fadeInDown">Far<span>Beyond</span><span>Solutions</span></h1>
+                  <h1 class="animated fadeInDown slogan">Far&nbsp;<span>Beyond&nbsp;</span><span>Solutions&nbsp;</span></h1>
                   <p class="animated fadeInUp delay-05s">Let us iGnite your <em>passion</em></p>
                 </div>
               </div>
