fixing the team cards ti just one still work to be done on that

--- a/index.html
+++ b/index.html
@@ -270,8 +270,26 @@
                 <h1 class="arrow">We're a team that adore what we do</h1>
               </div>
             </div>
-            <div class="row">
-              <div class="team-wrapper">
+            <div class="row ">
+                <div class="card mb-3 " >
+                    <div class="row no-gutters align-items-center">
+                      <div class="col-md-5">
+                        <img src="img/gabe.jpg" class="card-img teamAvatar" alt="...">
+                      </div>
+                      <div class="col-md-7">
+                        <div class="card-body">
+                          <h2 class="card-title ">Gabriel Farias</h2>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"><small class="text-muted"><ul class="social-buttons">
+                              <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
+                              <li><a href="#" class="social-btn"><i class="fa fa-envelope"></i></a></li>
+                            </ul></small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              <!-- <div class="team-wrapper">
                 <div id="teamSlider">
                   <ul class="slides">
                     <li>
@@ -316,7 +334,7 @@
                  
                   </ul>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
