added gabriels about

--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                       <div class="col-md-7">
                         <div class="card-body">
                           <h2 class="card-title ">Gabriel Farias</h2>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text">Gabriel Farias, Managing Partner at Far Beyond Solutions Consulting. His extensive background in the non-profit sector, business operations and his work with several small companies of The Bronx has provided an added value to FBS. Gabriel was born and raised in the Highbridge section of The Bronx where he has developed a passion to help his community. His work throughout The Bronx has presented him with a unique opportunity to make an impact in his community.
+                          </p>
                           <p class="card-text"><small class="text-muted"><ul class="social-buttons">
                               <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
                               <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
