--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
                 <h1 class="arrow">We're a team that adore what we do</h1>
               </div>
             </div>
+            <br>
             <div class="row ">
                 <div class="card mb-3 " >
                     <div class="row no-gutters align-items-center">
@@ -277,10 +278,11 @@
                         <img src="img/gabe.jpg" class="card-img teamAvatar" alt="...">
                       </div>
                       <div class="col-md-7">
-                        <div class="card-body">
-                          <h2 class="card-title ">Gabriel Farias</h2>
+                        <div class="card-body"><br>
+                          <h2 class="card-title ">Gabriel Farias</h2> 
                           <p class="card-text">Gabriel Farias, Managing Partner at Far Beyond Solutions Consulting. His extensive background in the non-profit sector, business operations and his work with several small companies of The Bronx has provided an added value to FBS. Gabriel was born and raised in the Highbridge section of The Bronx where he has developed a passion to help his community. His work throughout The Bronx has presented him with a unique opportunity to make an impact in his community.
                           </p>
+                          <br>
                           <p class="card-text"><small class="text-muted"><ul class="social-buttons">
                               <li><a href="#" class="social-btn"><i class="fa fa-dribbble"></i></a></li>
                               <li><a href="#" class="social-btn"><i class="fa fa-twitter"></i></a></li>
@@ -326,7 +328,7 @@
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="#"><br> Email</a></p>
+                  <p><a href="#"><br> info@fbs.consulting </a></p>
                 </div>
               </div>
             </div>
