--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Features</h1>
+                <h1 class="arrow">Business Solutions</h1>
                 <div class="features-wrapper">
                   <div class="col-md-4 wp2">
                     <div class="icon">
