added the thre business solutions

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                     <div class="icon">
                       <i class="fa fa-laptop shadow"></i>
                     </div>
-                    <h2>Connecting Buyers & Sellers</h2>
+                    <h2>Business Development</h2>
                     <p>A sortable database of local businesses makes finding the right vendor simple</p>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
                     <div class="icon">
                       <i class="fa fa-code shadow"></i>
                     </div>
-                    <h2>Providing Shared Business Services</h2>
+                    <h2>Business Optimization</h2>
                     <p>E-commerce services, innovative financing tools, and
                       customized online and offline support streamline transactions
                       for both vendors and purchasers
@@ -106,7 +106,7 @@
                     <div class="icon">
                       <i class="fa fa-heart shadow"></i>
                     </div>
-                    <h2>Promoting Sustainable & Equitable Business Practices</h2>
+                    <h2>Business Relationship Management </h2>
                     <p>High-performance and triple-bottom-line standards for
                       vendors ensure that local purchasing benefits the broader
                       Bronx community
