added the phone number

--- a/index.html
+++ b/index.html
@@ -90,16 +90,14 @@
                       <i class="fa fa-laptop shadow"></i>
                     </div>
                     <h2>Business Development</h2>
-                    <p>A sortable database of local businesses makes finding the right vendor simple</p>
+                    <p>* Sales * Marketing * Project Management/Business Planning * Product Development * Product Management *</p>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
                     <div class="icon">
                       <i class="fa fa-code shadow"></i>
                     </div>
                     <h2>Business Optimization</h2>
-                    <p>E-commerce services, innovative financing tools, and
-                      customized online and offline support streamline transactions
-                      for both vendors and purchasers
+                    <p>* Cloud Services * Processes Optimization * Processes & procedures * Automation *
                     </p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s">
@@ -107,9 +105,7 @@
                       <i class="fa fa-heart shadow"></i>
                     </div>
                     <h2>Business Relationship Management </h2>
-                    <p>High-performance and triple-bottom-line standards for
-                      vendors ensure that local purchasing benefits the broader
-                      Bronx community
+                    <p>* Maintain Customer Relationships * Identify Service Requirements * Sign up Customers to Standard Services * Customer Satisfaction Survey * Handle Customer Complaints * Monitor Customer Complaints * 
                     </p>
                   </div>
                   <div class="clearfix"></div>
@@ -278,7 +274,7 @@
                         <img src="img/gabe.jpg" class="card-img teamAvatar" alt="...">
                       </div>
                       <div class="col-md-7">
-                        <div class="card-body"><br>
+                        <div class="card-body">
                           <h2 class="card-title ">Gabriel Farias</h2> 
                           <p class="card-text">Gabriel Farias, Managing Partner at Far Beyond Solutions Consulting. His extensive background in the non-profit sector, business operations and his work with several small companies of The Bronx has provided an added value to FBS. Gabriel was born and raised in the Highbridge section of The Bronx where he has developed a passion to help his community. His work throughout The Bronx has presented him with a unique opportunity to make an impact in his community.
                           </p>
@@ -322,7 +318,7 @@
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
-                  <p><br>Phone #</p>
+                  <p><br>(718) 269 - 4948</p>
                 </div>
               </div>
               <div class="col-md-4">
